qnode41_prod_arch_env/qprometheus/templates/prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.dev.smartquail.io
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prometheus-service
              port:
                number: 8080
  tls:
  - hosts: 
    - prometheus.apps.shaker242.lab
    secretName: prometheus-secret
